--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -415,8 +415,8 @@
   "typeOfSignEmail":"Đăng nhập bằng email",
   "email.valid":"Địa chỉ email không hợp lệ",
   "typeOfSignPhone":"Đăng nhập bằng số điện thoại",
-  "success_sign":"Bạn vừa thực hiện ký thành công. Hợp đồng đã được chuyển tới người tiếp theo!",
-  "success_sign_update":"Bạn vừa thực hiện ký thành công. Hợp đồng đã được chuyển tới người tiếp theo!",
+  "success_sign":"Bạn vừa thực hiện ký thành công. Hợp đồng đã được hoàn thành xử lý!",
+  "sign_next_person":"Bạn vừa thực hiện ký thành công. Hợp đồng đã được chuyển tới người tiếp theo!",
   "success_watch":"Xem xét hợp đồng thành công",
   "my.contract":"HĐ của tôi",
   "org.contract":"HĐ của tổ chức",
