Thêm đóng mở thông tin chi tiết hợp đồng: Chi tiết HĐ, chi tiết HĐ mẫu, Ký

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,6 +69,7 @@
   "contract.name": "Contract name",
   "contract.file": "File contract",
   "contract.connect": "Contract connection",
+  "contract.connect.detail": "Contract connection",
   "contract.type": "Contract type",
   "contract.number": "Contract number",
   "contract.information": "Contract information",
