đổi text: Tên người dùng đổi thành Tên đăng nhập

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -166,7 +166,7 @@
   "user.network": "Nhà mạng",
   "user.information.individual": "Thông tin cá nhân",
   "user.information": "Thông tin tài khoản",
-  "user.name.v2": "Tên người dùng",
+  "user.name.v2": "Tên đăng nhập",
   "user.list": "Danh sách người dùng",
   "user.add": "Thêm mới người dùng",
   "user.update": "Cập nhật thông tin người dùng",
@@ -486,7 +486,7 @@
   "password.level1.blank":"Mật khẩu cấp 1 không được để trống",
   "password.level2.blank":"Mật khẩu cấp 2 không được để trống",
   "user.blank":"Tên người dùng không dược để trống",
-  "username":"Tên người dùng",
+  "username":"Tên đăng nhập",
   "taxcode.blank":"Mã số thuế/CMT/CCCD không được để trống",
   "taxcode.format":"Mã số thuế/CMT/CCCD không đúng định dạng",
   "package.information":"THÔNG TIN GÓI CƯỚC",
