sửa HĐ thành Tài liệu

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -23,7 +23,7 @@
   "login.password_old": "Mật khẩu cũ",
   "login.password_new.confirm": "Xác nhận mật khẩu mới",
   "logout": "Đăng xuất",
-  "document": "Tài liệu",
+  "document": "HDSD",
   "document.user.use": "Hướng dẫn sử dụng",
   "document.plugin.pki": "Plugin ký Token",
   "menu.dashboard": "Trang chủ",
@@ -69,7 +69,7 @@
   "contract.name": "Tên tài liệu",
   "contract.file": "File tài liệu",
   "contract.connect": "Tài liệu liên quan",
-  "contract.connect.detail": "HĐ liên quan",
+  "contract.connect.detail": "Tài liệu liên quan",
   "contract.type": "Loại tài liệu",
   "contract.number": "Số tài liệu",
   "contract.information": "Thông tin tài liệu",
@@ -434,7 +434,7 @@
   "sign_by_eKYC":"Ký bằng eKYC",
   "sign_by_otp":"Ký ảnh vs OTP",
   "sign.multi":"Ký nhiều",
-  "watch.contract":"Xem HĐ",
+  "watch.contract":"Xem tài liệu",
   "not.have.sample.file":"Bạn chưa có file mẫu?",
   "download.sample.file":"Tải file mẫu",
   "download.sample.file.fail":"Tải xuống file mẫu thất bại",
@@ -579,9 +579,9 @@
   "report.expires-soon.contract":"Sắp hết hiệu lực",
   "report.processing.status.contract":"Trạng thái xử lý",
   "report.number.contracts.status":"SL theo trạng thái",
-  "report.number.contracts.contract-type":"SL theo loại HĐ",
+  "report.number.contracts.contract-type":"SL theo loại tài liệu",
   "report.number.contracts.type.sign":"SL theo hình thức ký",
-  "report.number.contracts.type":"SL theo loại HĐ",
+  "report.number.contracts.type":"SL theo loại tài liệu",
   "report.detail.contract.full":"Báo cáo chi tiết tài liệu",
   "report.expires-soon.contract.full":"Báo cáo tài liệu sắp hết hiệu lực",
   "report.processing.status.contract.full":"Báo cáo trạng thái xử lý tài liệu",
@@ -592,7 +592,7 @@
   "report.contract.send.email": "Lịch sử gửi Email",
   "report.ekyc":"Báo cáo xác thực eKYC",
   "include.org1":"Bao gồm cả tổ chức con (Tổ chức con chỉ bao gồm tổ chức con cấp một)",
-  "report.number.econtract.msale":"SL HĐ eContract - mSale",
+  "report.number.econtract.msale":"SL tài liệu eContract - mSale",
   "contract.time.create": "Thời gian tạo",
   "signing.expiration.date":"Ngày hết hạn hiệu lực",
   "date.completed":"Ngày hoàn thành/từ chối/huỷ",
@@ -611,7 +611,7 @@
   "captcha.wrong":"Nhập sai captcha",
   "weak.pass":"Mật khẩu đang sử dụng không an toàn. Vui lòng đổi mật khẩu để bảo vệ tài khoản của bạn!",
   "error.update.handler": "Có lỗi cập nhật người xử lý",
-  "created.unit":"Đơn vị tạo HĐ",
+  "created.unit":"Đơn vị tạo tài liệu",
   "created.user":"Người tạo",
   "attach.file.valid":"File tài liệu yêu cầu định dạng pdf, doc, docx, png, jpg, jpeg, zip, rar, txt, xls, xlsx",
   "update.success":"Cập nhật thành công",
@@ -764,7 +764,7 @@
   "sign_cert_title": "Ký Chứng thư số server",
   "upload_attach_files": "Tải lên file đính kèm",
   "time.send.date":"Thời gian gửi",
-  "report.status.contract": "Trạng thái HĐ",
+  "report.status.contract": "Trạng thái tài liệu",
   "status.sms.email":"Trạng thái gửi",
   "code.contract": "Mã tài liệu",
   "phone": "SĐT",
@@ -859,7 +859,7 @@
   "mail.server.infor.success": "Cấu hình mail server thành công",
   "contract.enterPage": "Nhập số trang",
   "footer_text":"Bản quyền thuộc về Tổng công ty viễn thông MobiFone",
-  "text.dashboard.theme": "Nếu bạn đang có tài liệu/ tài liệu đang soạn, hãy tiếp tục hoàn thành để quá trình ký không bị chậm trễ!",
+  "text.dashboard.theme": "Nếu bạn đang có tài liệu đang soạn, hãy tiếp tục hoàn thành để quá trình ký không bị chậm trễ!",
   "request.process":"Yêu cầu cần xử lý",
   "package.document":"Gói tài liệu",
   "package.used": "Đã dùng",
@@ -889,14 +889,14 @@
   "of":"của",
   "page": "trang",
   "hello":"Xin chào",
-  "search.code.number.name": "Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ",
+  "search.code.number.name": "Tìm kiếm theo Mã tài liệu, Số tài liệu, Tên tài liệu",
   "view_all": "Xem tất cả",
   "find.sign": "Tìm ô ký",
   "note.usb.token.bcy": "- Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số tài liệu/ký nhiều ô ký cùng lúc",
   "enter.code.org": "Nhập mã tổ chức",
   "enter.name.org": "Nhập tên tổ chức",
   "update.last": "Cập nhật lần cuối",
-  "seach.report.ekyc": "Tìm kiếm theo Họ tên, CMT/CCCD, Tên HĐ, Mã HĐ, Số HĐ",
+  "seach.report.ekyc": "Tìm kiếm theo Họ tên, CMT/CCCD, Tên tài liệu, Mã tài liệu, Số tài liệu",
   "contract.change.status": "Chuyển xử lý tài liệu",
   "contract.cancel.status": "Hủy tài liệu",
   "contract.deny.status": "Từ chối tài liệu",
