loại bỏ các phần chưa đổi hợp đồng --> tài liệu + tài liệu/tài liệu --> tài liệu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -893,7 +893,7 @@
   "creators.processed": "Creators and those who processed",
   "creators.processing.processed": "People who are processing and those who have processed",
   "contract.info": "Document information",
-  "drag.contract.file": "Drag and drop or upload document/contract files",
+  "drag.contract.file": "Drag and drop or upload document",
   "drag.contract.here": "Here",
   "drag.contract.note": "Support docx, pdf files",
   "xoa_doi_tac": "Delete partner",
