--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -915,7 +915,7 @@
   "creators.processed": "Người tạo và những người đã xử lý",
   "creators.processing.processed": "Người đang xử lý và những người đã xử lý",
   "contract.info": "Thông tin tài liệu",
-  "drag.contract.file": "Kéo thả hoặc tải lên file tài liệu/tài liệu",
+  "drag.contract.file": "Kéo thả hoặc tải lên file tài liệu",
   "drag.contract.here": "Tại đây",
   "drag.contract.note": "Hỗ trợ file docx, pdf",
   "xoa_doi_tac": "Xóa đối tác",
