Gộp button ủy quyền/chuyển tiếp

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -453,7 +453,8 @@
   "relate.party": "Related parties",
   "authorization": "Authorization",
   "forward": "Forward",
-  "processing.auth":"Processing authorization",
+  "authori_forward":"Authorization/Forward",
+  "processing.auth":"Processing authorization/forward",
   "confirm": "Confirm",
   "contract.sign.confirm": "CONFIRM SIGN DOCUMENT",
   "content.confirm": "Do you agree to the content, terms of the document and the use of electronic methods to make transactions?",
