--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -478,7 +478,8 @@
   "sign.ekyc.app":"Vui lòng ký eKYC trên ứng dụng điện thoại",
   "authorization":"Uỷ quyền",
   "forward":"Chuyển tiếp",
-  "processing.auth":"Ủy quyền xử lý",
+  "authori_forward":"Ủy quyền/Chuyển tiếp",
+  "processing.auth":"Ủy quyền/Chuyển tiếp xử lý",
   "choose.network":"Chọn nhà mạng",
   "network.operator":"Nhà mạng",
   "confirm":"Xác nhận",
