Fix Lỗi không hiển thị loại ký eKYC trên màn hình tài liệu Đã xử lý

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -516,6 +516,7 @@
   "sign.by.pki": "Sign by Sim PKI",
   "sign.image.otp": "Sign image and OTP",
   "sign.image.ekyc": "Sign image or eKYC",
+  "signed.ekyc":"Signed eKYC",
   "sign.digital": "Sign digital",
   "auto.scroll": "Auto scroll",
   "preview": "Preview",
