--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -935,5 +935,9 @@
   "many.extensions": "Gia hạn nhiều",
   "error.notTime": "Vui lòng chọn ngày hết hạn ký",
   "person.processing.contract": "Tên người đang xử lý tài liệu",
-  "name.email.create.contract": "Tên/email người tạo tài liệu"
+  "name.email.create.contract": "Tên/email người tạo tài liệu",
+  "username.wrong.format": "Tên người dùng không đúng định dạng",
+  "choose.type.sign": "Chọn hình thức đăng nhập",
+  "status.account": "Trạng thái tài khoản",
+  "type.sign.email.phone": "Đăng nhập bằng Email và SĐT"
 }
