--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -867,7 +867,7 @@
   "package.unused":"Un used",
   "hello":"Hello",
   "menu.customer.list":"Customer directory",
-  "search.code.number.name": "Document code, Document number, Document name",
+  "search.code.number.name": "Doc code/number/name, Email, Phone number",
   "view_all": "View all",
   "edit.sign.time":"Edit sign time",
   "view.processing.flow":"View processing flow",
