--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -919,5 +919,6 @@
   "username.wrong.format": "Username is not correct format",
   "choose.type.sign": "Select login method",
   "status.account": "Account status",
-  "type.sign.email.phone": "Login by Email and Phone"
+  "type.sign.email.phone": "Login by Email and Phone",
+  "file.connect": "Related documents"
 }
