--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -943,5 +943,6 @@
   "username.wrong.format": "Tên người dùng không đúng định dạng",
   "choose.type.sign": "Chọn hình thức đăng nhập",
   "status.account": "Trạng thái tài khoản",
-  "type.sign.email.phone": "Đăng nhập bằng Email và SĐT"
+  "type.sign.email.phone": "Đăng nhập bằng Email và SĐT",
+  "file.connect": "Tài liệu liên quan"
 }
