--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -919,5 +919,7 @@
   "username.wrong.format": "Username is not correct format",
   "choose.type.sign": "Select login method",
   "status.account": "Account status",
-  "type.sign.email.phone": "Login by Email and Phone"
+  "type.sign.email.phone": "Login by Email and Phone",
+  "multi.sign.confirm":"By Confirming, you agree to the contents and terms of the contract and use electronic methods to perform transactions.",
+  "text.select": "Select a signature or seal image"
 }
