--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -509,7 +509,7 @@
   "contract.number.lot":"SỐ TÀI LIỆU THEO LÔ",
   "ok.sign":"Đồng ý và ký",
   "multi.sign.question":"Bạn có chắc chắn đồng ý với nội dung, điều khoản của tất cả các tài liệu và sử dụng phương thức điện tử để thực hiện giao dịch không?",
-  "multi.sign.confirm":"Bằng việc Xác nhận, bạn đồng ý với các nội dung, điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch.",
+  "multi.sign.confirm":"Bằng việc Xác nhận, bạn đồng ý với các nội dung, điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch",
   "alert":"CẢNH BÁO",
   "password.enter":"Nhập mật khẩu",
   "username.enter":"Nhập tên người dùng",
@@ -944,5 +944,6 @@
   "username.wrong.format": "Tên người dùng không đúng định dạng",
   "choose.type.sign": "Chọn hình thức đăng nhập",
   "status.account": "Trạng thái tài khoản",
-  "type.sign.email.phone": "Đăng nhập bằng Email và SĐT"
+  "type.sign.email.phone": "Đăng nhập bằng Email và SĐT",
+  "text.select": "Chọn hình ảnh chữ ký hoặc con dấu"
 }
