thêm option check box cho phép người xử lý đầu tiên đc nhập ô text

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -920,5 +920,7 @@
   "choose.type.sign": "Select login method",
   "status.account": "Account status",
   "type.sign.email.phone": "Login by Email and Phone",
-  "file.connect": "Related documents"
+  "file.connect": "Related documents",
+  "configuration": "Configuration",
+  "text.allow.first.handler": "Allows the first handler to edit all text/money boxes"
 }
