--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -944,5 +944,7 @@
   "choose.type.sign": "Chọn hình thức đăng nhập",
   "status.account": "Trạng thái tài khoản",
   "type.sign.email.phone": "Đăng nhập bằng Email và SĐT",
-  "file.connect": "Tài liệu liên quan"
+  "file.connect": "Tài liệu liên quan",
+  "cc.user": "CC Tài liệu tới",
+  "hind_text_cc": "Nhập email, ngăn cách nhau bởi dấu ','"
 }
