Fix bug validate data apikey webhook

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -933,5 +933,6 @@
   "system.config": "System configuration",
   "choose.api": "Choose API",
   "api.is.required": "Api is required",
-  "config.system": "Config system"
+  "config.system": "Config system",
+  "example.apikey": "Enter Api Key, example: 56494c92-f18f-4f3e-ac79-49544661e63b"
 }
