--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -958,5 +958,6 @@
   "choose.api": "Chọn API",
   "api.is.required": "Loại API không được phép bỏ trống",
   "config.system": "Cấu hình hệ thống",
-  "example.apikey": "Nhập API Key, ví dụ: 56494c92-f18f-4f3e-ac79-49544661e63b"
+  "example.apikey": "Nhập API Key, ví dụ: 56494c92-f18f-4f3e-ac79-49544661e63b",
+  "webhook.body.sample": "Đây là dữ liệu mẫu. Vui lòng bypass dữ liệu này trong API"
 }
