--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -876,7 +876,7 @@
   "enter.code.org": "Enter organization code",
   "enter.name.org": "Enter organization name",
   "update.last": "Last updated",
-  "seach.report.ekyc": "Search Full name,CMT/CCCD,Name-Code-Number of Document",
+  "seach.report.ekyc": "Full name,CMT/CCCD,Name-Code-Number of Document",
   "code.contract": "Document code",
   "phone": "Phone number",
   "content":"Content",
