--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -951,5 +951,6 @@
   "text.select": "Chọn hình ảnh chữ ký hoặc con dấu",
   "create.document.holds.signing.stream": "Tạo tài liệu giữ luồng ký",
   "keep.signature.stream.all": "Giữ toàn bộ luồng ký",
-  "keep.signature.stream.organizational": "Chỉ giữ luồng tổ chức của tôi"
+  "keep.signature.stream.organizational": "Chỉ giữ luồng tổ chức của tôi",
+  "contract.status.liquidated.v2": "Thanh lý"
 }
