--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -962,5 +962,5 @@
   "person_cc": "NGƯỜI ĐƯỢC CC",
   "webhook.body.sample": "Đây là dữ liệu mẫu. Vui lòng bypass dữ liệu này trong API",
   "search.code.number.name.1": "Mã TL, Số TL, Tên TL",
-  "text.select.note": "(hình ảnh nền có định dạng PNG với nền trong suốt)" 
+    "text.support.extension": "Vui lòng tải lên ảnh chữ ký/ con dấu đã được tách nền (PNG) để đảm bảo hiển thị chính xác và chuyên nghiệp trên tài liệu/ hợp đồng!"
 }
