Xử lý FE File đính kèm khi tạo hợp đồng có thể lấy từ các file up trên Quản lý thư mục

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -415,6 +415,7 @@
   "org.contract": "Organization's document",
   "choose.contract": "Choose document",
   "choose.contract.type": "Choose type of document",
+  "choose.attach.file":"Completed Document or in the Folder Management menu",
   "side": "Side",
   "cancel": "Cancel",
   "type_of_sign": "Type of sign",
