--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -427,6 +427,7 @@
   "org.contract":"Tài liệu của tổ chức",
   "choose.contract":"Chọn tài liệu",
   "choose.contract.type":"Chọn loại tài liệu",
+  "choose.attach.file":"Tài liệu đã hoàn thành hoặc trong menu Quản lý thư mục",
   "side":"Bên",
   "cancel":"Hủy",
   "cancel.multi": "Hủy nhiều",
