thêm trạng thái thanh lý phần đã xử lý

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -737,7 +737,7 @@
   "contracts.per.page": " trên trang",
   "continue.using.web": "Tiếp tục sử dụng trên web",
   "contract.liquidation": "Thanh lý tài liệu",
-  "contract.status.liquidated": "Đã thanh lý",
+  "contract.status.liquidated": "Thanh lý",
   "contract.original": "Tài liệu gốc",
   "contract.liquidated": "Tài liệu thanh lý",
   "folder.add": "Thêm thư mục",
