sửa lỗi valid hsm và lấy dữ liệu lưu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -474,7 +474,7 @@
   "password.level1": "Password level 1",
   "password.level2": "Password",
   "password.level1.blank": "Level 1 password cannot be blank",
-  "password.level2.blank": "Password cannot be blank",
+  "password.level2.blank": "PIN/Password cannot be blank",
   "user.blank": "User cannot be blank",
   "username": "Username",
   "taxcode.blank": "Tax code cannot be blank",
@@ -831,7 +831,7 @@
   "content.sms.brand": "Content SMS",
   "enter.supplier": "Choose supplier",
   "check.config.brandname": "Please check the connection before saving the configuration",
-  "password.blank": "Password cannot be blank",
+  "password.blank": "PIN/Password cannot be blank",
   "taxcode.not.match.hsm":"Tax code/CMT/CCCD does not match document signing information",
   "login.method.title": "Or sign in with",
   "folder.search.placeholder": "Search by folder name, document name, document code, partner name",
