--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -489,7 +489,7 @@
   "password.level1":"Mật khẩu cấp 1",
   "password.level2":"Mã PIN/Mật khẩu",
   "password.level1.blank":"Mật khẩu cấp 1 không được để trống",
-  "password.level2.blank":"Mật khẩu không được để trống",
+  "password.level2.blank":"Mã PIN/Mật khẩu không được để trống",
   "user.blank":"Tên người dùng không được để trống",
   "username":"Tên đăng nhập",
   "taxcode.blank":"Mã số thuế/CMT/CCCD không được để trống",
@@ -851,7 +851,7 @@
   "content.sms.brand": "Nội dung SMS",
   "enter.supplier": "Chọn nhà cung cấp",
   "check.config.brandname": "Vui lòng kiểm tra kết nối trước khi thực hiện lưu cấu hình",
-  "password.blank":"Mật khẩu không được để trống",
+  "password.blank":"Mã PIN/Mật khẩu không được để trống",
   "taxcode.not.match.hsm":"Mã số thuế/CMT/CCCD không trùng khớp thông tin ký tài liệu",
   "login.method.title": "Hoặc đăng nhập bằng",
   "folder.search.placeholder": "Tìm kiếm theo tên thư mục, tên tài liệu, mã tài liệu, tên đối tác",
