tối ưu xuất báo cáo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -940,5 +940,6 @@
   "person_cc": "PERSON CC",
   "search.code.number.name.1": "Doc code/number/name",
   "liquidated": "Liquidated",
-  "text.support.extension": "Please upload a background-extracted image of your signature/seal (PNG) to ensure accurate and professional display on the document/contract!"
+  "text.support.extension": "Please upload a background-extracted image of your signature/seal (PNG) to ensure accurate and professional display on the document/contract!",
+  "report.exporting": "Exporting report"
 }
